# beyond

./: 0713.py  1_2_5.py  aboutCCG.html  ccg.css  ccg.html  contact.html  db.sqlite3  portfolio.html  test.cpp  test2.cpp
cmake-sample/: CMakeLists.txt
cmake-sample/include/: Calculator.h  Greeter.h
cmake-sample/src/: CMakeLists.txt  Calculator.cpp  Greeter.cpp  main.cpp
cmake-sample/tests/: CMakeLists.txt  test_Calculator.cpp
config/: settings.py  urls.py
pybo/: admin.py  forms.py  models.py  urls.py  views.py
pybo/migrations/: 0001_initial.py
simple-cpp/: Makefile  main.cpp
static/: style.css
templates/: base.html  navbar.html
templates/pybo/: post_detail.html  post_form.html  post_list.html
